<resources>
    <string name="app_name">CRM</string>
    <string name="evergreen_city">Evergreen City</string>
    <string name="why_evergreen_city">Why Evergreen City</string>
    <string name="our_commitment">Our Commitment is to facilitate a healthy and peaceful lifestyle</string>
    <string name="mins">mins</string>
    <string name="sirsa_gate_chowk">Sirsa Gate Chowk</string>
    <string name="_5">5</string>
    <string name="railway_station">Railway Station</string>
    <string name="_40">40</string>
    <string name="raipur_airport">Raipur Airport</string>
    <string name="fun_nzone">Fun\nZone</string>
    <string name="amenities">Amenities</string>
    <string name="multi_npurpose_hall">Multi-\npurpose Hall</string>
    <string name="open_amphitheatre">Open Amphitheatre</string>
    <string name="yoga_amp_meditation_area"><![CDATA[Yoga & Meditation Area]]></string>
    <string name="play_narea">Play\nArea</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="tennis_court">Tennis Court</string>
    <string name="net_cricket_pitch">Net Cricket Pitch</string>
    <string name="fully_equipped_gym">Fully Equipped Gym</string>
    <string name="jogging_track">Jogging Track</string>
    <string name="senior_citizen_park">Senior Citizen Park</string>
    <string name="fruit_and_herbal_garden">Fruit and Herbal Garden</string>
    <string name="entry_exit_security_cabin">Entry/Exit Security Cabin</string>
    <string name="our_real_estate">Our real estate developing partner</string>
    <string name="rr_new_town">RR New town developers</string>
    <string name="evergreen_peaceful">Evergreen Peaceful and Healthy lifestyle</string>
    <string name="the_township"><![CDATA[The township is built on an aspiration towards a people-friendly development that incorporates green ideas, easy accessibility & communal living.]]></string>
    <string name="suggested_floor_plans">Suggested Floor Plans</string>
    <string name="know_more">Know More</string>
    <string name="_2">2</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>

    <string name="login_preference">com.egcity.crm_preference</string>
    <string name="login_status_preference">com.egcity.crm_status_preference</string>

    <string name="response_cname_sharedpref">com.egcity.crm_login_name</string>
    <string name="response_ctoken_sharedpref">com.egcity.crm_login_token</string>
    <string name="response_croles_sharedpref">com.egcity.crm_login_roles</string>
    <string name="response_cpass_sharedpref">com.egcity.crm_login_pass</string>
    <string name="response_cfilterinward_sharedpref">com.egcity.crm_login_pass</string>
    <string name="nav_home">Home</string>
    <string name="nav_book">Book</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_noti">Notifications</string>
    <string name="nav_acc">Account</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="log_out">LOG OUT</string>
    <string name="space" />
    <string name="coming_soon">Coming Soon</string>
    <string name="search_listing">Search Listing</string>
    <string name="stock">STOCK</string>
    <string name="all_inventory">ALL INVENTORY</string>
    <string name="inward_inventory">INWARD INVENTORY</string>
    <string name="outward_inventory">OUTWARD INVENTORY</string>
    <string name="machinery_inventory">MACHINERY INVENTORY</string>
    <string name="lost_inventory">LOST INVENTORY</string>
    <string name="inventory_management">INVENTORY MANAGEMENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="lead_information">Lead Information</string>
    <string name="customer_pipeline">Customer Pipeline</string>
    <string name="activity_planner">Activity Planner</string>
    <string name="leads">Leads</string>
    <string name="add_contact">Add Contact</string>
    <string name="search_by_name">Search by Name</string>
    <string name="name">Name</string>
    <string name="lead_nstatus">Lead\nStatus</string>
    <string name="mobile_nnumber">Mobile\nNumber</string>
    <string name="owner">Owner</string>
    <string name="activity_ntype">Activity\nType</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="view_attachments"><u>View Attachments</u></string>
    <string name="hide_attachments"><u>Hide Attachments</u></string>
    <string name="revert"><u>REVERT</u></string>
    <string name="add_note_to_this_activity">Add note to this activity</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="quotation">Quotation</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="schedule_a_follow_up">Schedule a follow-up</string>
    <string name="save">Save</string>
    <string name="write_your_note">Write your note.</string>
    <string name="attach">Attach</string>
    <string name="pinned_note">Pinned Note</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="customer_first_name">Customer First Name</string>
    <string name="customer_last_name">Customer Last Name</string>
    <string name="primary_mobile_number">Primary Mobile Number</string>
    <string name="secondary_mobile_number">Secondary Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="occupation">Occupation</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="lead_source">Lead Source</string>
    <string name="broker">Broker</string>
    <string name="property_type">Property type</string>
    <string name="lead_owner">Lead Owner</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state_region">State/Region</string>
    <string name="zip_postal_code">ZIP/Postal Code</string>
    <string name="cancel">Cancel</string>
    <string name="stagnated_days">Stagnated Days</string>
    <string name="sentiment_of_customer">Sentiment of customer</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="_10_20">10-20</string>
    <string name="_30"><![CDATA[>30]]></string>
    <string name="_20_30">20-30</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="primary_mobile">Primary Mobile</string>
    <string name="lead">Lead</string>
    <string name="attach_more">Attach More</string>
    <string name="pinned_status">Pinned Status</string>
    <string name="delete">Delete</string>
    <string name="top_performer">Top Performer</string>
    <string name="pipe">Pipeline</string>
</resources>