<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/date_time_pin_rl_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/tellcom_date_ll_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/telecom_image_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/telecommuting" />

                    <TextView
                        android:id="@+id/act_date_tv_row_pen"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="July 15,2020"
                        android:textColor="@color/colordarkHeading"
                        android:textSize="8sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/created_by_ll_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@id/tellcom_date_ll_row"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/user" />

                    <TextView
                        android:id="@+id/act_created_by_tv_row_pen"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="Created by : Nikhar Sachdeva"
                        android:textColor="@color/colordarkHeading"
                        android:textSize="8sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_time_pin_rl_notes"
                android:orientation="vertical"
                android:padding="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/act_meet_head_tv_pen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="Meeting :"
                        android:textColor="@color/colorPendingText"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/act_meet_subhead_tv_pen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Attend Meeting"
                        android:textColor="@color/colordarkHeading"
                        android:textSize="12sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/act_meet_desc_tv_pen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Though this user able to add necessary information about the customer which will remain on the top always. "
                    android:textColor="@color/colordarkHeading"
                    android:textSize="10sp" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chips_pen_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    app:chipSpacing="8dp"
                    app:singleSelection="false" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/greybackground"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/act_meet_edit_tv_pen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/add_note_to_this_activity"
                        android:textSize="10sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_act_pen_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="Rescheduled"
                        android:textColor="@color/colordarkHeading"
                        android:textSize="8sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/datetime_con_pend_act"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:gravity="center_vertical"
                            android:text="@string/date"
                            android:textColor="@color/colordarkHeading"
                            android:textSize="8sp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/spinnerbackground"
                            android:padding="5dp">

                            <EditText
                                android:id="@+id/res_date_act_pen_row"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="5dp"
                                android:layout_toEndOf="@id/image_drop_down_date"
                                android:background="@null"
                                android:focusableInTouchMode="false"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="date"
                                android:textSize="10sp" />

                            <ImageView
                                android:id="@+id/image_drop_down_date"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentStart="true"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/ic_baseline_date_range_24" />


                        </RelativeLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:gravity="center_vertical"
                            android:text="@string/time"
                            android:textColor="@color/colordarkHeading"
                            android:textSize="8sp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/spinnerbackground"
                            android:padding="5dp">

                            <EditText
                                android:id="@+id/res_time_act_pen_row"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="5dp"
                                android:layout_toEndOf="@id/image_drop_down_time"
                                android:background="@null"
                                android:focusableInTouchMode="false"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="date"
                                android:textSize="10sp" />

                            <ImageView
                                android:id="@+id/image_drop_down_time"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentStart="true"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/ic_time" />


                        </RelativeLayout>


                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pend_activity_revert_tv_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:clickable="true"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/revert"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/colorPendingText"
                        android:textSize="8sp"
                        android:textStyle="bold"
                        android:focusable="true" />

                    <Button
                        android:id="@+id/sub_btn_act_pen_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/ripple_grey_green"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />


                </RelativeLayout>


            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
